feat(stocks): buy and sell stocks

--- a/client/main.html
+++ b/client/main.html
@@ -1,9 +1,9 @@
 <head>
-  <title>trading-floor</title>
+    <title>trading-floor</title>
 </head>
 
 <body>
-  <div class="container" ng-app="trading-floor">
-    <stocks-list></stocks-list>
-  </div>
+    <div class="container" ng-app="trading-floor">
+        <market></market>
+    </div>
 </body>
